# Courses

CrewAi/agents_blocks_demo/: educative_kb.json  educative_kb_routing.json  main.py  main_kb.py
CrewAi/agents_blocks_demo/patterns/: evaluator_optimizer_pattern_demo.py  ochestrator_worker_pattern_demo.py  parallelization_pattern_demo.py  prompt_chaining_demo.py  routing_pattern_demo.py
CrewAi/coding_agent_demo/: README.md  pyproject.toml
CrewAi/coding_agent_demo/src/coding_agent_demo/: crew.py  main.py
CrewAi/coding_agent_demo/src/coding_agent_demo/config/: agents.yaml  tasks.yaml
CrewAi/educative_intro_to_agents/: README.md  pyproject.toml
CrewAi/educative_intro_to_agents/src/educative_intro_to_agents/: crew.py  main.py
CrewAi/educative_intro_to_agents/src/educative_intro_to_agents/config/: agents.yaml  tasks.yaml
CrewAi/hello_world_crew_ai/: README.md  pyproject.toml  report.md
CrewAi/hello_world_crew_ai/src/hello_world_crew_ai/: crew.py  main.py
CrewAi/multi_agent_systems_demo/: README.md  pyproject.toml  report.md
CrewAi/multi_agent_systems_demo/src/multi_agent_systems_demo/: crew.py  main.py
CrewAi/multi_agent_systems_demo/src/multi_agent_systems_demo/config/: agents.yaml  tasks.yaml
CrewAi/multi_server_mcp_demo/: mcp_client.py  task_server.py  tasks.txt  weather_server.py
CrewAi/mutli_agent_adv_func_demo/: README.md  pyproject.toml
CrewAi/mutli_agent_adv_func_demo/src/mutli_agent_adv_func_demo/: crew.py  main.py
CrewAi/mutli_agent_adv_func_demo/src/mutli_agent_adv_func_demo/config/: agents.yaml  tasks.yaml
CrewAi/single_mcp_demo/: mcp_client.py  weather_server.py
CrewAi/youtube_multi_agent_system_demo/: README.md  pyproject.toml
CrewAi/youtube_multi_agent_system_demo/src/youtube_multi_agent_system_demo/: crew.py  main.py
CrewAi/youtube_multi_agent_system_demo/src/youtube_multi_agent_system_demo/config/: agents.yaml  tasks.yaml
MERN/mern-react-app/: index.html  package.json
MERN/mern-react-app/src/: App.tsx  Root.tsx
MERN/mern-react-app/src/models/: place.ts  user.ts
React - The Complete Guide/01-starting-project/src/: App.jsx
React - The Complete Guide/05-investment-practice-project/src/: App.jsx
React - The Complete Guide/05-investment-practice-project/src/components/: Header.jsx  Result.jsx  UserInput.jsx
React - The Complete Guide/06-styling-components/: tailwind.config.js
React - The Complete Guide/06-styling-components/src/components/: AuthInputs.jsx  Button.jsx  Header.jsx  Input.jsx
React - The Complete Guide/08-refs-portals/src/: App.jsx
React - The Complete Guide/08-refs-portals/src/components/: Player.jsx  ResultModal.jsx  TimerChallenge.jsx
React - The Complete Guide/09-project-management/src/: App.jsx
React - The Complete Guide/09-project-management/src/components/: Input.jsx  Modal.jsx  NewProject.jsx  NewTask.jsx  NoProjectSelected.jsx  ProjectDetails.jsx  ProjectsSidebar.jsx  Tasks.jsx
React - The Complete Guide/10-advance-state-mngmt/src/: App.jsx
React - The Complete Guide/10-advance-state-mngmt/src/components/: Cart.jsx  Header.jsx
React - The Complete Guide/10-advance-state-mngmt/src/store/: shopping-cart-context.jsx
React - The Complete Guide/11-side-effects/src/: App.jsx  enums.js  loc.js
React - The Complete Guide/11-side-effects/src/components/: DeleteConfirmation.jsx  Modal.jsx  ProgressBar.jsx
React - The Complete Guide/15-http-requests/: package.json
React - The Complete Guide/15-http-requests/src/: App.jsx  http.js
React - The Complete Guide/16-custom-hooks/src/: App.jsx
React - The Complete Guide/17-form-handling/src/: App.jsx
React - The Complete Guide/18b-adv-form-actions/backend/: db.json
React - The Complete Guide/19-food-app/: eslint.config.js  package.json
React - The Complete Guide/20-redux-basic-demo/: redux-demo.js
React - The Complete Guide/20-redux-basics/src/: App.js
React - The Complete Guide/21-adv-redux/src/: App.js
React - The Complete Guide/22-react-router-p2/backend/: events.json
React - The Complete Guide/22-react-router/src/: App.js
React - The Complete Guide/23-authentication/backend/: events.json
React - The Complete Guide/24-deployment/src/: App.js
React - The Complete Guide/25-react-query/: package.json
React - The Complete Guide/25-react-query/src/: App.jsx
React - The Complete Guide/26-nextjs/foodies-project/: meals.db  next.config.js  package.json
React - The Complete Guide/29-react-patterns/src/: App.jsx
React - The Complete Guide/30-redux-context-hooks/src/: index.js
React - The Complete Guide/32-react-typescript/: package.json
React - The Complete Guide/tic-tac-toe-starting-project/src/: App.jsx
(+144 files in other folders)
