[project]
name = "coding_agent_demo"
version = "0.1.0"
description = "coding_agent_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
coding_agent_demo = "coding_agent_demo.main:run"
run_crew = "coding_agent_demo.main:run"
train = "coding_agent_demo.main:train"
replay = "coding_agent_demo.main:replay"
test = "coding_agent_demo.main:test"
run_with_trigger = "coding_agent_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
