[project]
name = "educative_intro_to_agents"
version = "0.1.0"
description = "educative_intro_to_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
educative_intro_to_agents = "educative_intro_to_agents.main:run"
run_crew = "educative_intro_to_agents.main:run"
train = "educative_intro_to_agents.main:train"
replay = "educative_intro_to_agents.main:replay"
test = "educative_intro_to_agents.main:test"
run_with_trigger = "educative_intro_to_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
