[project]
name = "hello_world_crew_ai"
version = "0.1.0"
description = "hello_world_crew_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
hello_world_crew_ai = "hello_world_crew_ai.main:run"
run_crew = "hello_world_crew_ai.main:run"
train = "hello_world_crew_ai.main:train"
replay = "hello_world_crew_ai.main:replay"
test = "hello_world_crew_ai.main:test"
run_with_trigger = "hello_world_crew_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
