[project]
name = "multi_agent_systems_demo"
version = "0.1.0"
description = "multi-agent-systems-demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.4.1",
    "litellm>=1.80.0",
    "qdrant-client>=1.16.0",
]

[project.scripts]
multi_agent_systems_demo = "multi_agent_systems_demo.main:run"
run_crew = "multi_agent_systems_demo.main:run"
train = "multi_agent_systems_demo.main:train"
replay = "multi_agent_systems_demo.main:replay"
test = "multi_agent_systems_demo.main:test"
run_with_trigger = "multi_agent_systems_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
