[project]
name = "mutli_agent_adv_func_demo"
version = "0.1.0"
description = "mutli_agent_adv_func_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentops>=0.4.21",
    "crewai[tools]==1.5.0",
]

[project.scripts]
mutli_agent_adv_func_demo = "mutli_agent_adv_func_demo.main:run"
run_crew = "mutli_agent_adv_func_demo.main:run"
train = "mutli_agent_adv_func_demo.main:train"
replay = "mutli_agent_adv_func_demo.main:replay"
test = "mutli_agent_adv_func_demo.main:test"
run_with_trigger = "mutli_agent_adv_func_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
