[project]
name = "youtube_multi_agent_system_demo"
version = "0.1.0"
description = "youtube_multi_agent_system_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "qdrant-client==1.15.0",
]

[project.scripts]
youtube_multi_agent_system_demo = "youtube_multi_agent_system_demo.main:run"
run_crew = "youtube_multi_agent_system_demo.main:run"
train = "youtube_multi_agent_system_demo.main:train"
replay = "youtube_multi_agent_system_demo.main:replay"
test = "youtube_multi_agent_system_demo.main:test"
run_with_trigger = "youtube_multi_agent_system_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
